Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-07-22 (SVN):
    * Added support for building the OSX versions usin gthe makefiles.
      Do not rely on sdl-config on OSX Framework builds and define new
      SDL_FRAMEWORK and NO_SDL_CONFIG preprocessor macros to indicate
      that and include SDL.h with the "SDL" subdirectory name included.

2012-07-22 (SVN):
    * Added new OSX midi driver based on SDL_mixer using CoreServices,
      added it to build and removed the old QuickTime code from build.
      As a bonus, this eliminates our dependency to Carbon stuff.

2012-07-22 (SVN):
    * Moved SDLMain.[m|h] from MacOSX subdir to under h2shared. Added
      SDLMain.o to SYSOBJ_SYS in the makefiles for (gl)h2 and (gl)hw.

2012-07-19 (SVN):
    * utils (LoadFile): don't use SafeMalloc() to avoid an unnecessary
      memset. reverted to using malloc() directly.

2012-07-19 (SVN):
    * utils, jsh2colour: removed unused GetFileSpace() and file globals.
      removed unnecessary check for extfile existence during arguments
      parsing, because ParseDefFile() already errors out if the file is
      not found.

2012-07-18 (SVN):
    * cl_demo.c (CL_PlayDemo_f): set key_dest to key_game only when the
      demo file is successfully opened.

2012-07-18 (SVN):
    * cl_demo.c: for a command like "record demoname map [track]", don't
      continue if the map cannot be started. do not continue if the demo
      file cannot be opened for the timedemo command.

2012-07-18 (SVN):
    * cl_demo.c (CL_PlayDemo_f): don't use fscanf() to read forcetrack:
      even though a *.dem file is a binary, cls.forcetrack is "printed"
      at the very start as a decimal number followed by a '\n'. a space
      character e.g. 0x20 (' ') following the '\n' makes fscanf to skip
      that byte too and screws up further reads. we now manually parse
      the forcetrack, like q1 code does, and also verify that the '\n'